# jsource

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  requirements.txt  setup.cfg  setup.py
conda.recipe/: meta.yaml
dllsrc/: jdllcomx.cpp
docs/: requirements.txt  rtd.yml
docs/source/: README.rst  build.rst  conf.py  index.rst  jruntime.rst
jsrc/: CMakeLists.txt  ar.c  cd.c  cip.c  cv.c  cvr.cpp  f.c  i.c  io.c  ja.h  je.h  jlib.h  jruntime.cc  jt.h  jtype.h  k.c  npy.c  npydict.c  npydict.h  npydict.peg  tags.txt  u.c  v.c  vi.c  viavx.c  visp.c  vrep.c  vs.c  x.c  xa.c  xf.c  xs.c
make2/: makefile-libj
makemsvc/: makemsvc.txt
makemsvc/jdll/: makefile  makefile.win
makevs/jdll/template/: jdll_vs2013.vcxproj  jdll_vs2019.vcxproj  jdll_vs2019_clang.vcxproj
pybind11/include/pybind11/: pybind11.h
pybind11/tools/: pybind11Common.cmake
