[metadata]
name = jruntime
version = 0.1.3
author = Zhihao Yuan
author_email = zy@simplerose.com
description = J Language Runtime
license = GPLv3+
url = https://github.com/zhihaoy/jsource
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX :: Linux

[options]
zip_safe = False
python_requires = >=3.8
